Updated my portfolio

--- a/index.html
+++ b/index.html
@@ -11,19 +11,21 @@
 <body>
   <header>
     <div class="header-img">
-      <h3>Text over img</h3>
+      <
       <!-- set the background to the image -->
     </div>
     <div class="header-text">
-      <h1>Diandra Ryan-Mas</h1>
-      <h2>Development Instructor</h2>
-      <h3>Bisbee, AZ</h3>
+      <h1>Mohamed Essamaali</h1>
+      <h2>Full Stack Web</h2>
+      <h3>Clifton, NJ</h3>
     </div>
   </header>
   <section class="about">
     <div class="text-container">
       <h3>About Me</h3>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem facilis rem ipsum aliquid officia distinctio optio eos provident natus eius molestias, ipsa necessitatibus dolor est magnam iusto. Nostrum, sed aspernatur?</p>
+      <p>I am a full stack web developer. I love technology Engineering and working with people.
+        I had grasped a solid knowlwdge of HTML:5, CSS and Responsive Web design.
+      </p>
     </div>
   </section>
   <section class="skills">
@@ -32,17 +34,31 @@
       <div class="skill-item">
         <i class="fas fa-code"></i>
         <h4>HTML</h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem ducimus voluptate asperiores veniam explicabo, ratione, vel minus animi officiis tempore porro doloremque corporis tenetur adipisci quisquam quasi itaque repellat velit.</p>
+        <p>
+          HTML: Hyper-Text Markup Language  is a method or a language to display the content of
+           webpages. HTML gives us the ability to access data from 
+           differnt places by using different devices. 
+        </p>
       </div>
       <div class="skill-item">
         <i class="fab fa-css3"></i>
         <h4>CSS</h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem ducimus voluptate asperiores veniam explicabo, ratione, vel minus animi officiis tempore porro doloremque corporis tenetur adipisci quisquam quasi itaque repellat velit.</p>
+        <p>
+          CSS: Cascade style Sheet is used to style our html to have a 
+          better view. a Webpage without a styling is not going to have 
+          a friendly user interface; As a result, it will discourage
+           users from using again. 
+        </p>
       </div>
       <div class="skill-item">
         <i class="fas fa-mobile"></i>
         <h4>Responsive Design</h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem ducimus voluptate asperiores veniam explicabo, ratione, vel minus animi officiis tempore porro doloremque corporis tenetur adipisci quisquam quasi itaque repellat velit.</p>
+        <p>
+          We don't want the content of websites to be scattered all over the places
+           within website due to different devices' size. We need to add 
+           some features and some of the codes so the 
+          website will respond accordingly based on the size of the media.
+        </p>
       </div>
     </div>
   </section>
